Use round backgrounds on the fixed buttons of the sidebar
This matches the style of the close button in the Files app of NC25 but
it doesn't look bad on older clouds, either. Anyway, this background is
almost never visible in our case so this doesn't matter much, either
way.

--- a/css/music-sidebar.css
+++ b/css/music-sidebar.css
@@ -32,9 +32,10 @@
 
 #app-sidebar .close {
 	position: fixed;
-	top: 45px;
+	top: var(--header-height, 45px);
 	right: var(--body-container-margin, 0);
-	border-top-right-radius: var(--body-container-radius);
+	border-radius: 50%;
+	margin: 6px;
 	padding: 14px;
 	width: 44px;
 	height: 44px;
@@ -45,6 +46,7 @@
 
 /* IE doesn't support the var() syntax */
 .ie #app-sidebar .close {
+	top: 45px;
 	right: 0;
 	background-color: rgba(255, 255, 255, .95);
 }
@@ -182,9 +184,9 @@
 	position: fixed;
 	right: var(--body-container-margin, 0);
 	bottom: var(--body-container-margin, 0);
-	border-bottom-right-radius: var(--body-container-radius);
+	border-radius: 50%;
 	background-color: var(--color-main-background-translucent, rgba(255, 255, 255, .95));
-	margin: 0;
+	margin: 6px;
 	padding: 12px;
 }
 
